# AIStatusHub

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  config.example.toml  install-ai-hub-service.bat  install-duo-console.bat  install-hermes-command.bat  install-mimo-command.bat  start-ai-hub-macos.command  start-ai-hub-windows.bat  start-mimo-with-hub.bat  status-ai-hub-service.bat  uninstall-ai-hub-service.bat
.mimocode/: mimocode.json
docs/: AIStatusHub设计.md  AIStatusHub软件架构规划.md  Duo_Buildroot_Guide.md
duo/CV1800B/: BUILD_CUSTOM_IMAGE.md  DUAL_SPI_LCD_ST7789V_CONSOLE.md  NATIVE_FRAMEBUFFER_SPI_LCD.md  PIN_BINDINGS.md  PROJECT_LOG.md  README.md  build_duo_image.sh  dw-spi-cs-gpios.patch  gc9a01_driver_duo.py  monitor_and_pack.out  monitor_and_pack.sh
examples/codex-hooks/: README.md
examples/hermes-agent/: README.md
examples/mimo-code/: README.md
examples/vscode/: README.md
scripts/: README_BT.md  install-ai-hub-service.ps1  install-duo-console-command.ps1  install-hermes-command.ps1  install-mimo-command.ps1  install-mimo-hub-config.ps1  macos_bt_probe  macos_bt_probe.swift  macos_classic_bt_scan.m  run-ai-hub-service.ps1  scp_duo.exp  setup-macos-duo-env.sh  ssh_duo.exp  ssh_duo.py  start-ai-hub.ps1  start-ai-hub.sh  start-mimo-with-hub.ps1  status-ai-hub-service.ps1  uninstall-ai-hub-service.ps1
src/: api.rs  cli.rs  config.rs  hub.rs  ingest.rs  main.rs  model.rs  monitors.rs  outputs.rs  security.rs  snapshot.rs  state.rs  web.rs
tools/duo-console/: Cargo.toml  README.md
tools/duo-console/src/: main.rs
(+93 files in other folders)
