[package]
name = "aistatushub"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A lightweight local status hub for AI coding tools."

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
directories = "5"
async-stream = "0.3"
futures-util = "0.3"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = true
